--- a/style.css
+++ b/style.css
@@ -2,3 +2,9 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: red;
 }
+[src*='downloadedimage.jpeg']{
+    height: 400px;
+}
+[src*="download2nd.jpeg"]{
+    height: 350px;
+}
